force-app/main/default/objects/Inquiry_Data__c/Inquiry_Data__c.object-meta.xml
<CustomObject>
    <label>Inquiry Data</label>
    <nameField>
        <displayFormat>InquiryData-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inquiry Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>