force-app/main/default/objects/Inquiry_Data__c/fields/Date_Format__c.field-meta.xml
<CustomField>
    <fullName>Date_Format__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Format</label>
    <length>64</length>
    <type>Text</type>
</CustomField>