force-app/main/default/objects/Inquiry_Data__c/fields/Fixed_Value__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fixed Value</label>
    <length>64</length>
    <type>Text</type>
</CustomField>