force-app/main/default/objects/Inquiry_Data__c/fields/Salesforce_Field__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Salesforce Field</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>